@@ -62,14 +62,14 @@ h3. --diff
 This option tells RSpec to print a unified diff of any Strings that are expected to be equal,
 but are not. This is especially handy when comparing large Strings. Example:
 
-<ruby file="../failing_examples/big_string_spec.rb" />
+<ruby file="../failing_examples/diffing_spec.rb" />
 
 And the output using <tt>--diff</tt>
 
 <pre>
-$ spec failing_examples/big_string_spec.rb --diff
+$ spec failing_examples/diffing_spec.rb --diff
 
-{execute: ruby -I../lib ../bin/spec ../failing_examples/big_string_spec.rb --diff}
+{execute: ruby -I../lib ../bin/spec ../failing_examples/diffing_spec.rb --diff}
 </pre>
 
 If you want to use the <tt>--diff</tt> option, you must also gem install diff-lcs. You
